# KanjiKen-KanjiVG

./: .gitignore  README  kanjivg.py  kvg-lookup.py  kvg.py  pyproject.toml  updatepublic.ts  utils.py
.github/ISSUE_TEMPLATE/: kanji-issue.md
src/kvg/: kanjivg.py  kvg-lookup.py  kvg.py  utils.py  xmlhandler.py
src/kvg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
